--- a/index.html
+++ b/index.html
@@ -8,10 +8,25 @@
       href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"
     />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Document</title>
+    <title>DrinksNDice</title>
 </head>
 <body>  
   <main >
+  <!-- Board Game Search Fields-->
+  <div>
+    <!-- MSRP -->
+    <label for="msrp">Maximum MSRP</label>
+    <input type="number" id="msrp" name="msrp" min="1">
+    <!-- Min/Max player count-->
+    <label for="minPlayer">Minimum Player Count</label>
+    <input type="number" id="minPlayer" name="minPlayer" min="1">
+
+    <!-- set a checker to ensure maxPlayer > minPlayer-->
+    <label for="maxPlayer">Maximum Player Count</label>
+    <input type="number" id="maxPlayer" name="maxPlayer" min="">
+    <!-- Genre -->
+    <!-- Playtime -->
+  </div>
   <div>
 
     <div >
@@ -31,5 +46,6 @@
     </div>
   </div>
   <script src="assets/js/script.js"></script>
+  <script src="assets/js/gameScript.js"></script>
 </body>
 </html>
