console.log is pulling data

--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
 
     <div >
       <h3>Search By Cocktail</h3>
-      <form id="cocktailFormEl" >
-        <label class="form-label" for="cocktail">Cocktail</label>
-        <input name="username" id="username" type="text" autofocus="true" class="form-input" />
+      <form id="cocktail-form" >
+        <label class="form-label"></label>
+        <input name="username" id="cocktail-name" type="text" autofocus="true" class="form-input" />
         <button type="submit" class="btn">Get Cocktail</button>
       </form>
     </div>
   </div>
 
   <div class="col-12 col-md-8">
-    <h2 class="subtitle">Showing Repositories for: <span id="repo-search-term"></span></h2>
-    <div id="repos-container" class="list-group">
+    <h2 class="subtitle">Showing recipes for: <span id="cocktail-search-term"></span></h2>
+    <div id="cocktail-container" class="list-group">
 
     </div>
   </div>
