recipes are showing

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 
   <div class="col-12 col-md-8">
     <h2 class="subtitle">Showing recipes for: <span id="cocktail-search-term"></span></h2>
-    <div id="cocktail-container" class="list-group">
+    <ul id="cocktail-container" class="list-group">
 
-    </div>
+    </ul>
   </div>
   <script src="assets/js/script.js"></script>
 </body>
