--- a/index.html
+++ b/index.html
@@ -1,35 +1,38 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"
-    />
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
-<body>  
-  <main >
-  <div>
-
-    <div >
-      <h3>Search By Cocktail</h3>
-      <form id="cocktailFormEl" >
-        <label class="form-label" for="cocktail">Cocktail</label>
-        <input name="username" id="username" type="text" autofocus="true" class="form-input" />
-        <button type="submit" class="btn">Get Cocktail</button>
-      </form>
-    </div>
-  </div>
-
-  <div class="col-12 col-md-8">
-    <h2 class="subtitle">Showing Repositories for: <span id="repo-search-term"></span></h2>
-    <div id="repos-container" class="list-group">
-
-    </div>
+<body>
+  <div class='optionsCointainer'><br>
+    <div id='selectionOne'><span>What is your budget?</span></div>
+    <form>
+    <select name="htmlMsrp" id='htmlMsrp'>
+      <option value="" disabled selected>Please make a selection</option>
+      <option value="under25">Under $25</option>
+      <option value="25to50">$25 to $50</option>
+      <option value="50to100">$50 to $100</option>
+      <option value="100andAbove">$100 and above</option>
+    </select>
+    <div id='selectionTwo'><br><span>How many players?</span></div>
+    <select name="htmlPlayers">
+      <option value="" disabled selected>Please make a selection</option>
+      <option value="1to2">1-2</option>
+      <option value="2to4">2-4</option>
+      <option value="5andMore">5 and more</option>
+    </select>
+  </form>
+  </div><br>
+  <div id='result'>
+    <button id='submitBtn'>Roll the dice!"</button>
+  </div><br>
+  <div id='resultContainer'>
+    result will be displayed here
   </div>
   <script src="assets/js/script.js"></script>
+  
 </body>
 </html>
