--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     <!-- Genre -->
     <!-- Playtime -->
   </div>
-  <div>
+  <!-- <div> -->
 
-    <div >
+    <!-- <div >
       <h3>Search By Cocktail</h3>
       <form id="cocktail-form" >
         <label class="form-label"></label>
@@ -37,15 +37,14 @@
         <button type="submit" class="btn">Get Cocktail</button>
       </form>
     </div>
-  </div>
+  </div> -->
 
   <div class="col-12 col-md-8">
-    <h2 class="subtitle">Showing recipes for: <span id="cocktail-search-term"></span></h2>
-    <ul id="cocktail-container" class="list-group">
-
-    </ul>
+    <h2 class="subtitle">Enjoy this cocktail with your game  <span id="cocktail-search-term"></span></h2>
+    <button type="submit" class="random-cocktail-btn">Get Random Cocktail</button><div id="cocktail"></div>
+    <div id="overlay"></div>
   </div>
-  <script src="assets/js/script.js"></script>
+  <script src="assets/js/cocktailScript.js"></script>
   <script src="assets/js/gameScript.js"></script>
 </body>
 </html>
