linked new js file

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           </p>
         </div>
       </footer>
-      <script src="assets/js/cocktailScript.js"></script>
+      <script src="assets\js\cocktailScript1.js"></script>
       <script src="assets/js/gameScript.js"></script>
 </body>
 </html>
