--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
 
   <div class="col-12 col-md-8">
     <h2 class="subtitle">Enjoy this cocktail with your game  <span id="cocktail-search-term"></span></h2>
-    <button type="submit" class="random-cocktail-btn">Get Random Cocktail</button><div id="cocktail"></div>
+    <button type="submit" class="random-cocktail-btn">Get Random Cocktail</button>
+    <div id="cocktail"></div>
     <div id="overlay"></div>
   </div>
   <script src="assets/js/cocktailScript.js"></script>
