--- a/index.html
+++ b/index.html
@@ -37,17 +37,16 @@
   <!--Start Card Sections here-->
       <!--Board Game Form Card--> 
       <!--columns-->
-      <div class="columns">
-        <div class="column">
+
           <!--Form Starts Here-->
-         <div class="time">
+         <!-- <div class="time">
           <label class="label">Time</label>
           <div class="control">        
             <input class="input" type="text" placeholder="Text input">
           </div>
-          <p class="help">How long do you want to play?</p>
+          <p class="help">How long do you want to play?</p> -->
         
-        <div class ="genre">
+        <!-- <div class ="genre">
         <label class="label">Genre</label>
         <div class="control">
           <div class="select">
@@ -70,7 +69,7 @@
             </select>
            </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
     <!--Form Ends-->
@@ -98,7 +97,7 @@
     <div class="card">
       <div class="card-image">
         <figure class="image is-4by3">
-          <img src="/assets/Images/martini-1117932_960_720 (1).jpg" alt="Colorful Martinis">
+          <img src="/the-8-team-project/assets/Images/martini-1117932_960_720 (1).jpg" alt="Colorful Martinis">
         </figure>
       </div>
       <div class="card-content">
@@ -123,6 +122,17 @@
     </div>
   </div>
 
+  <!--Footer Section-->
+  <footer class="footer">
+    <div class="content has-text-centered">
+      <p>
+        <strong>Bulma</strong> by <a href="https://jgthms.com">Jeremy Thomas</a>. The source code is licensed
+        <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content
+        is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>.
+      </p>
+    </div>
+  </footer>
+
   <div class="col-12 col-md-8">
     <h2 class="subtitle">Showing Repositories for: <span id="repo-search-term"></span></h2>
     <div id="repos-container" class="list-group">
@@ -131,16 +141,7 @@
   </div>
   <script src="assets/js/script.js"></script>
   <script src="assets/js/gameScript.js"></script>
-  <!--Footer Section-->
-<footer class="footer">
-  <div class="content has-text-centered">
-    <p>
-      <strong>Bulma</strong> by <a href="https://jgthms.com">Jeremy Thomas</a>. The source code is licensed
-      <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content
-      is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>.
-    </p>
-  </div>
-</footer>
+
 </body>
 
 </html>
