added age search paramter and removed genre parameter

--- a/index.html
+++ b/index.html
@@ -63,12 +63,11 @@
 <!-- Search options seclector/ Search button container start -->
         <div class="notification is-widescreen is-medium is-flex is-flex-wrap-wrap is-align-content-center is-align-items-center marginTop">
           <div class="select margin">
-            <select name="htmlGenre" id="htmlGenre">
-              <option value="" disabled selected>Genre</option>
-              <option value="competitive">Competitive</option>
-              <option value="cooperative">Cooperative</option>                 
-              <option value="family">Family</option>
-              <option>Party</option>
+            <select name="htmlAge" id="htmlAge">
+              <option value="" disabled selected>Minimum Player Age</option>
+              <option value="min6">6+</option>
+              <option value="min12">12+</option>                 
+              <option value="min18">18+</option>
             </select>
           </div>
           <div class="select margin">
@@ -83,7 +82,7 @@
               <option value="" disabled selected>Budget</option>
               <option value="under25">Under $25</option>
               <option value="25to50">$25 to $50</option>
-              <option value="100andAbove">$100 and above</option>
+              <option value="50andAbove">$50 and above</option>
             </select>
           </div>
           <div class="select margin">
