changed the search button style due to some render issues

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
               <option value="no">No</option>
             </select>
           </div>
-          <button class="btn margin" id="searchBtn">
+          <button class="button is-warning margin" id="searchBtn">
             <span class="icon is-medium ">
               <i class="fas fa-dice"></i>
             </span>
