fixed page styling

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <!-- <link rel="stylesheet" href="./assets/css/debuger.css"> -->
     <link rel="stylesheet" href="./assets/css/style.css">
-    <script defer src="/assets/js/all.js"></script>
+    <script defer src="./assets/js/all.js"></script>
     <title>Drinks N' Dice</title>
 </head>
 
