--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <!-- <link rel="stylesheet" href="./assets/css/debuger.css"> -->
     <link rel="stylesheet" href="./assets/css/style.css">
-    <script defer src="/assets/js/all.js"></script>
+    <script defer src="./assets/js/all.js"></script>
     <title>Drinks N' Dice</title>
 </head>
 
@@ -122,14 +122,14 @@
   </div>
   <div class="column is-4" id="drinkDisplayContainer">
     <div class="card" id="drinkImage">
-      <div class="card-image">
-          <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
+      <div class="card-image"  id=>
+          <!-- <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image"> -->
       </div>
-      <div class="title pad">
+      <div class="title pad" id="cocktail">
         Drink name goes here
       </div>
       <div class="content pad">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente maxime beatae illo maiores ex voluptatum sequi voluptas est ratione magnam voluptates esse distinctio recusandae, atque illum adipisci dolorem quae facilis?
+       
       </div>
       </div>
   </div>
