changed hero section

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             Drinks N' Dice
           </p>
           <p class="subtitle">
-            Board Games & Cocktails
+            Board Game & Cocktail Randomizer
           </p>
         </div>
       </section>
