--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
   </div>
   <div class="column is-4" id="drinkDisplayContainer">
     <div class="card" id="drinkImageCard">
+      <button type="submit" class="random-cocktail-btn">Get Random Cocktail</button>
       <div class="card-image">
           <!-- <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image"> -->
       </div>
