--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
       <div class="card-image">
         <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image" id="drinkImage">
     </div>
-    <div class="title pad" id="cocktail">
+    <div class="title pad" id="drinkName">
       Drink name goes here
     </div>
-      <div class="content pad" id="cocktailInstructions">    
+      <div class="content pad" id="drinkDesc">    
       </div>
       </div>
   </div>
