added hide display cards feature. refactored drinks randomizer function

--- a/index.html
+++ b/index.html
@@ -106,26 +106,26 @@
   <div class="column is-2">
   <!-- Margin alternative/Placeholder-->
   </div>
-  <div class="column is-4" id="gamesDisplayContainer">
+  <div class="column is-4 hide" id="gameDisplayContainer">
     <div class="card" id="gameImageCard">
       <div class="card-image">
-          <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image" id="gameImage">
+          <img src="" alt="Placeholder image" id="gameImage">
       </div>
       <div class="title pad" id="gameName">
-        Game name goes here
+        <!-- Game name goes here -->
       </div>
       <div class="content pad" id="gameDesc">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente maxime beatae illo maiores ex voluptatum sequi voluptas est ratione magnam voluptates esse distinctio recusandae, atque illum adipisci dolorem quae facilis?
+      <!-- description goes here -->  
       </div>
       </div>
   </div>
-  <div class="column is-4" id="drinkDisplayContainer">
+  <div class="column is-4 hide" id="drinkDisplayContainer">
     <div class="card" id="drinkImageCard">
       <div class="card-image">
-        <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image" id="drinkImage">
+        <img src="" alt="Placeholder image" id="drinkImage">
     </div>
     <div class="title pad" id="drinkName">
-      Drink name goes here
+      <!-- Drink name goes here -->
     </div>
       <div class="content pad" id="drinkDesc">    
       </div>
