--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <span class="icon">
         <i class="fab fa-github-alt"></i>
       </span>
-      <a href="" class="link is-info has-text-black">GitHub Pages</a>
+      <a href="https://pardue95.github.io/the-8-team-project/" class="link is-info has-text-black">GitHub Pages</a>
     </p>
     <p class="level-item has-text-centered">
       <img src="assets/Images/logo.png" alt="" style="height: 30px;">
